# GramsSimSensitivity

./: .gitignore  .gitmodules  CMakeLists.txt  GenCondorJobs.py  Makefile  README.md  RemoveClutter.sh  SensitivityOptions.xml  TODO.md  TomlSanityCheck.py  cmake_install.cmake  compile.sh  conda_config.sh  conda_dep.yaml  config.sh  enviornment.yml  q
Background/: Commands.txt  GenEnergySpectrum.py  README.md
BackgroundRecon/: CMakeLists.txt  Commands.txt  GenBackCounts.cpp  GenBackgroundHists.cpp  GenCondorScriptsHist.py  README.md
BackgroundRecon/include/: BackgroundHistGenScripts.h
BackgroundRecon/src/: BackgroundHistGenScripts.cpp
ConfigFiles/: Configs.ini  Configs.toml  SensitivityOptions.xml
EffArea/: CMakeLists.txt  CalcEffArea.cpp  CalcEffArea.py  Commands.txt  CommandsSphere.txt  CommandsUnique.txt  EffAreaPlt.py  GenCondorJobs.py  GenCondorScripts.py  GenEffArea.py  GenEffAreaScripts.cpp  README.md
EffArea/include/: CalcEffAreaFunctions.h  EffAreaScripts.h
EffArea/src/: CalcEffAreaFunctions.cpp
GenerateCondor/: CMakeLists.txt  Extract.cpp
SenseJob/: Extract  README.md  SensitivityOptions.xml  gramsdetsim  gramsg4  gramssky  options.xml
SenseJob/GDMLSchema/: Makefile  cmake_install.cmake
SenseJob/mac/: SourceHepmc3.mac
Sensitivity/: CalculateSensitivity.py  PLACEHOLDER
SensitivityUtils/: CMakeLists.txt  GenCondorCountsHistsScripts.py  GenCondorJobs.py  Makefile  README.md  cmake_install.cmake
SensitivityUtils/Extraction/: CMakeLists.txt  Extract.cpp  Makefile  cmake_install.cmake
SensitivityUtils/GenSkyMap/: CMakeLists.txt  GenSkyMap.cpp  Makefile  README.md  cmake_install.cmake
SensitivityUtils/Reconstruction/: CMakeLists.txt  Makefile  README.md  Reconstruct.cpp  cmake_install.cmake
SensitivityUtils/include/: CalcSenseUtils.h  DetSimEntry.h  Entry.h  ExtractUtils.h  ExtractionEntry.h  G4Entry.h  GenBackCountsUtils.h  GenSkyMapUtils.h  GramsG4Entry.h  README.md  ReadRootFiles.h  RecoEntry.h  ReconstructUtils.h  UsefulTypeDefs.h
SensitivityUtils/src/: DetSimEntry.cpp  Entry.cpp  ExtractUtils.cpp  ExtractionEntry.cpp  G4Entry.cpp  GenBackCountsUtils.cpp  GenSkyMapUtils.cpp  GramsG4Entry.cpp  README.md  ReadRootFiles.cpp  RecoEntry.cpp  ReconstructUtils.cpp
Source/: CMakeLists.txt  CalculateSensitivity.cpp  Commands100KeV.txt  Configs.toml  GenMask.py  GenMaskBackup.py  README.md
SourceRecon/: CMakeLists.txt  CalculateSensitivity.cpp  Commands.txt  Commands100KeV.txt  Commands10MeV.txt  Commands1MeV.txt  GenMask.py  GenSourceScripts.cpp  README.md  SourceHist.cmd  SourceHist.sh
SourceRecon/include/: SourceScripts.h
SourceRecon/src/: SourceScripts.cpp
cmake/: README.md
gdml/: ThinFlatGrams.gdml  ThinGrams.gdml
utils/: CMakeLists.txt  EnergySpec.root  Extract.cpp  GenCondorCountsHistsScripts.py  GenCondorScripts.py  GenCondorScriptsHist.py  GenEnergySpectrum.py  GenMask.py  README.md  Reconstruct.cpp
utils/CalculateSensitivity/: CMakeLists.txt  CalculateSensitivity.cpp
utils/Extraction/: CMakeLists.txt  Extract.cpp  README.md
utils/GenBackCounts/: CMakeLists.txt  GenBackCounts.cpp
utils/GenCountsHists/: CMakeLists.txt  GenCountsHists.cpp  README.md
utils/GenSkyMap/: CMakeLists.txt  GenSkyMap.cpp
utils/Reconstruction/: CMakeLists.txt  Reconstruct.cpp
utils/include/: CalcSenseUtils.h  ExtractUtils.h  GenBackCountsUtils.h  GenSkyMap.h  GenSkyMapUtils.h  README.md  ReadRootFiles.h  ReconstructUtils.h
utils/src/: CalcSenseUtils.cpp  ExtractUtils.cpp  GenBackCountsUtils.cpp  GenSkyMapUtils.cpp  Options.cpp  ReadRootFiles.cpp  ReconstructUtils.cpp
